--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
             position: relative;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
             background-image: url("IMG_1209.jpeg"); /* Subtle Texture */
+            background-size: cover; /* or contain, depending on your need */
+            background-repeat: no-repeat;
+            background-position: center;
             background-color: #EFCFA0;
         }
         .top-section {
