--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 </head>
 <body>
 
-    <h2>News Poster Editor (made by KABYA)</h2>
+    <h2>News Poster Editor By KABYA</h2>
 
     <div class="container">
         <div class="editor">
