--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             text-align: center;
             position: relative;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
-            background-image: url("IMG_1210.jpeg"); /* Subtle Texture */
+            background-image: url("BG.png"); /* Subtle Texture */
             background-size: cover; /* or contain, depending on your need */
             background-repeat: no-repeat;
             background-position: center;
