--- a/index.html
+++ b/index.html
@@ -158,16 +158,16 @@
         <div class="poster" id="poster">
             <div class="top-section">
                 <div id="channelName">KALAMOLOGY NEWS</div>
-                <div id="dateText">02 ফেব্রুয়ারি ২০২৫</div>
+                <div id="dateText">Date </div>
             </div>
             <img id="mainImage" class="news-image" src="" alt="News Image">
             <div class="bottom-section">
                 <div class="news-title" id="newsTitle">
-                    চ্যাম্পিয়ন নাটোর রাজশাহী ফুটবল দলের হয়ে খেলেছেন সাতক্ষীরার দেবহাটা ও কালিগঞ্জ উপজেলার একাধিক ফুটবলার।
+                    Title Goes Here
                 </div>
                 <div class="email" id="emailText">abulkalaminakbar@gmail.com</div>
             </div>
-            <div class="sponsor" id="sponsorText">Sponsored by Sabbir Telecom</div>
+            <div class="sponsor" id="sponsorText">Sponsor Section</div>
         </div>
     </div>
 
