--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
             <input type="text" id="channelNameInput" value="KALAMOLOGY NEWS"><br><br>
 
             <label>Date:</label>
-            <input type="text" id="dateInput" value="02 ফেব্রুয়ারি ২০২৫"><br><br>
+            <input type="text" id="dateInput" value="Set Your date"><br><br>
 
             <label>News Title:</label>
             <textarea id="newsTitleInput" rows="2">Title goes here</textarea><br><br>
@@ -150,7 +150,7 @@
             <input type="text" id="emailInput" value="abulkalaminakbar@gmail.com"><br><br>
 
             <label>Sponsor Text:</label>
-            <input type="text" id="sponsorTextInput" value="Sponsor"><br><br>
+            <input type="text" id="sponsorTextInput" value="Sponsor Section"><br><br>
 
             <button onclick="downloadPoster()">Download Poster</button>
         </div>
