--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
             <input type="file" id="mainImageUpload"><br><br>
 
             <label>News Channel Name:</label>
-            <input type="text" id="channelNameInput" value="KALAMOLOGY NEWS"><br><br>
+            <input type="text" id="channelNameInput" value="Channel Name"><br><br>
 
             <label>Date:</label>
             <input type="text" id="dateInput" value="Set Your date"><br><br>
