--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             <textarea id="newsTitleInput" rows="2">Title goes here</textarea><br><br>
 
             <label>Email Address:</label>
-            <input type="text" id="emailInput" value="abulkalaminakbar@gmail.com"><br><br>
+            <input type="text" id="emailInput" value="youremail@gmail.com"><br><br>
 
             <label>Sponsor Text:</label>
             <input type="text" id="sponsorTextInput" value="Sponsor Section"><br><br>
@@ -157,7 +157,7 @@
 
         <div class="poster" id="poster">
             <div class="top-section">
-                <div id="channelName">KALAMOLOGY NEWS</div>
+                <div id="channelName">channel name</div>
                 <div id="dateText">Date </div>
             </div>
             <img id="mainImage" class="news-image" src="" alt="News Image">
@@ -165,7 +165,7 @@
                 <div class="news-title" id="newsTitle">
                     Title Goes Here
                 </div>
-                <div class="email" id="emailText">abulkalaminakbar@gmail.com</div>
+                <div class="email" id="emailText">youremail@gmail.com</div>
             </div>
             <div class="sponsor" id="sponsorText">Sponsor Section</div>
         </div>
